# integer-pairing

./: README.md  pyproject.toml  test.py
integer_pairing/: __init__.py  _bundle.py  _cantor.py  _interface.py  _szudzik.py  cantor.py  szudik.py
tests/: test_integer_pairing.py
