[tool.poetry]
name = "integer-pairing"
version = "0.2.0"
description = ""
authors = ["Nejc Ševerkar <nseverkar@gmail.com>"]
repository = "https://github.com/kuco23/integer-pairing/"
keywords = ["test", "dependencies", "documentation"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
